--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -14,30 +14,34 @@
 
 <body>
     <div class="user-info-container" width="">
-        <div class="container">
-            <div class="row">
-                <div class="mb-3 mt-3 col-6">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="col-6"></div>
-                <div class="mb-3 col-6">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="col-6"></div>
-                <div class="pb-3 col-6">
-                    <label for="exampleInputUserName" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="exampleInputUserName">
-                </div>
-                <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+        <!--method = post: đẩy, method = get: lấy -->
+        <!--action = -->
+        <form method="POST" action="/users/create-user">
+            <div class="container">
+                <div class="row">
+                    <div class="mb-3 mt-3 col-6">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" name="email" class="form-control" id="email" required>
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="col-6"></div>
+                    <div class="mb-3 col-6">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="password" required>
+                    </div>
+                    <div class="col-6"></div>
+                    <div class="pb-3 col-6">
+                        <label for="userName" class="form-label">Username</label>
+                        <input type="text" name="username" class="form-control" id="userName" required>
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
 
 
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 </body>
 
